added youtube as an option

--- a/index.html
+++ b/index.html
@@ -7,39 +7,6 @@
     <title>Akasha</title>
 </head>
 <body>
-<header>
-    <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-            <hr>
-            <label for="language">Language:</label>
-            <select id="language">
-                <option value="en">English</option>
-                <option value="es">Spanish</option>
-                <option value="fr">French</option>
-            </select>
-            <hr>
-            <h3>Follow us:</h3>
-            <div class="social-media">
-                <a href="https://github.com/po1sontre" target="_blank">
-                    <img src="github-color-svgrepo-com.svg" width="32" height="32" alt="GitHub">
-                </a>
-                <a href="https://discord.com" target="_blank">
-                    <img src="discord-icon-svgrepo-com.svg" width="32" height="32" alt="Discord">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="instagram-1-svgrepo-com.svg" width="32" height="32" alt="Instagram">
-                </a>
-            </div>
-        </div>
-    </div>
-</header>
 <div class="container">
     <h1 class="title">Akasha V1</h1>
     <div class="input-container">
@@ -48,6 +15,7 @@
     <div class="button-container">
         <button class="search-button" id="google-button">Google</button>
         <button class="search-button" id="duckduckgo-button">DuckDuckGo</button>
+        <button class="search-button" id="youtube-button">YouTube</button> <!-- Added YouTube button -->
     </div>
 </div>
 <footer>
